derive/tests/fail/06-inv-declared-contra.rs
use transient::Transient;

#[derive(Transient)]
#[contravariant(a)]
struct InvariantType<'a, T> {
    value: fn(&'a T) -> &'a T,
}

fn main() {
    // this test should fail to compile
}
