derive/tests/fail/06-inv-declared-contra.stderr
error: lifetime may not live long enough
 --> tests/fail/06-inv-declared-contra.rs:3:10
  |
3 | #[derive(Transient)]
  |          ^^^^^^^^^ function was supposed to return data with lifetime `'a` but it is returning data with lifetime `'__short`
4 | #[contravariant(a)]
  |   ------------- lifetime `'__short` defined here
5 | struct InvariantType<'a, T> {
  |                      -- lifetime `'a` defined here
  |
  = help: consider adding the following bound: `'__short: 'a`
  = note: requirement occurs because of the type `InvariantType<'_, T>`, which makes the generic argument `'_` invariant
  = note: the struct `InvariantType<'a, T>` is invariant over the parameter `'a`
  = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
  = note: this error originates in the derive macro `Transient` (in Nightly builds, run with -Z macro-backtrace for more info)
